--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,19 @@ body {
 a {
   text-decoration: none;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 /*common*/
 
 .container {
@@ -115,24 +127,49 @@ button {
 
 /* #endregion */
 
+.hero-list {
+  display: flex;
+  gap: 24px;
+}
+.hero-list-item {
+  width: calc((100% - 72px) / 4);
+}
 .hero {
+  padding-bottom: 120px;
+}
+.hero .container {
   background-color: #2e2f42;
 }
 .hero-title {
+  width: 496px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  padding-top: 188px;
+  padding-bottom: 188px;
+  margin-bottom: 48px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn-cont-hero {
+  display: flex;
 }
 .hero-btn {
   font-weight: 500;
-  font-size: 16px;
+
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
+  border-radius: 4px;
+  width: 169px;
+  padding: 16px 32px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -140,6 +177,7 @@ button {
 }
 
 .title-desc {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -169,6 +207,8 @@ button {
 }
 .page-footer {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-logo .logo-part {
   color: #f4f4fd;
