--- a/css/styles.css
+++ b/css/styles.css
@@ -44,11 +44,9 @@ h6,
 p {
   margin: 0;
 }
-
-button {
-  cursor: pointer;
+img {
+  display: block;
 }
-
 /*Header*/
 
 .header-page {
@@ -135,13 +133,12 @@ button {
   width: calc((100% - 72px) / 4);
 }
 .hero {
-  padding-bottom: 120px;
 }
 .hero .container {
   background-color: #2e2f42;
 }
 .hero-title {
-  width: 496px;
+  max-width: 496px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -155,29 +152,44 @@ button {
   margin-right: auto;
 }
 
-.btn-cont-hero {
-  display: flex;
+.section-serv {
+  padding: 120px 0;
 }
-.hero-btn {
-  font-weight: 500;
 
+button {
+  cursor: pointer;
+  display: block;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
   border-radius: 4px;
-  width: 169px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
   padding: 16px 32px;
   margin-left: auto;
   margin-right: auto;
 }
+.btn-cont-hero {
+  display: flex;
+}
+
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: #404bbf;
 }
-
+.section-list {
+  display: flex;
+  background-color: #fff;
+  display: flex;
+  gap: 24px;
+  border-radius: 0px 0px 4px 4px;
+}
 .title-desc {
   margin-bottom: 8px;
+  text-align: center;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -185,17 +197,23 @@ button {
   color: #2e2f42;
 }
 .text-desc {
+  text-align: center;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
 .section-hero {
+  padding: 120px 0;
   background-color: #f4f4fd;
 }
-.section-item {
-  background-color: #fff;
-}
 
+.section-tech {
+  padding: 120px 0 120px 0;
+}
+.section-item {
+  width: calc((100% - 72px) / 4);
+}
 .section-title {
   font-weight: 700;
   font-size: 36px;
@@ -204,11 +222,27 @@ button {
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 72px;
+}
+.container-sect {
+  padding: 32px 16px;
+}
+.tech-desc-title {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+  width: calc((100% - 48px) / 3);
 }
 .page-footer {
   background-color: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-logo .logo-part {
   color: #f4f4fd;
