--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,10 @@ img {
   width: calc((100% - 72px) / 4);
 }
 .hero {
+  background: #2e2f42;
+  align-items: center;
+  padding: 188px 0;
+  margin: 0 auto;
 }
 .hero .container {
   background-color: #2e2f42;
@@ -145,18 +149,17 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  padding-top: 188px;
-  padding-bottom: 188px;
-  margin-bottom: 48px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+  align-items: center;
 }
-
+.hero-cont {
+  display: block;
+  align-items: center;
+}
 .section-serv {
   padding: 120px 0;
 }
-
-button {
+.hero-btn {
   cursor: pointer;
   display: block;
   font-weight: 500;
@@ -169,8 +172,11 @@ button {
   height: 56px;
   border: none;
   padding: 16px 32px;
+  margin-top: 48px;
   margin-left: auto;
   margin-right: auto;
+}
+.button {
 }
 .btn-cont-hero {
   display: flex;
@@ -180,12 +186,16 @@ button {
 .hero-btn:focus {
   background-color: #404bbf;
 }
+.container .section-cont {
+  margin: 0 auto;
+}
+.section-cont {
+  text-align: center;
+}
 .section-list {
   display: flex;
-  background-color: #fff;
-  display: flex;
   gap: 24px;
-  border-radius: 0px 0px 4px 4px;
+  text-align: center;
 }
 .title-desc {
   margin-bottom: 8px;
@@ -197,10 +207,17 @@ button {
   color: #2e2f42;
 }
 .text-desc {
-  text-align: center;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #434455;
+}
+.foto-desc {
+  padding: 32px 0;
+}
+.section {
+  padding: 120px 0;
 }
 
 .section-hero {
@@ -208,10 +225,10 @@ button {
   background-color: #f4f4fd;
 }
 
-.section-tech {
-  padding: 120px 0 120px 0;
-}
 .section-item {
+  background-color: #ffffff;
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
   width: calc((100% - 72px) / 4);
 }
 .section-title {
@@ -224,8 +241,10 @@ button {
   color: #2e2f42;
   margin-bottom: 72px;
 }
-.container-sect {
+.section-tech-cont {
   padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 .tech-desc-title {
   display: flex;
@@ -248,6 +267,7 @@ button {
   color: #f4f4fd;
 }
 .footer-title {
+  max-width: 264px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
